--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="ipad10_5" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -20,20 +20,20 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3h4-0Q-Hht">
-                                <rect key="frame" x="297" y="20" width="240" height="576"/>
+                                <rect key="frame" x="67.5" y="20" width="240" height="353.5"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="center" verticalHuggingPriority="249" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" image="logo-u" translatesAutoresizingMaskIntoConstraints="NO" id="GeU-j0-Bp9">
-                                        <rect key="frame" x="89" y="0.0" width="62" height="392"/>
+                                        <rect key="frame" x="89" y="0.0" width="62" height="169.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="62" id="hFg-nH-Lat"/>
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="llH-vi-aXG">
-                                        <rect key="frame" x="0.0" y="392" width="240" height="184"/>
+                                        <rect key="frame" x="0.0" y="169.5" width="240" height="184"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="axj-DE-jVh">
                                                 <rect key="frame" x="0.0" y="0.0" width="240" height="40"/>
@@ -147,11 +147,11 @@
                         <viewControllerLayoutGuide type="bottom" id="4yM-4T-ECm"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="uqz-ef-zQt">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="82t-rd-a7r">
-                                <rect key="frame" x="0.0" y="64" width="834" height="999"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <connections>
                                     <outlet property="delegate" destination="wAX-zr-Hto" id="ftj-Cj-cQU"/>
                                 </connections>
@@ -183,20 +183,20 @@
                         <viewControllerLayoutGuide type="bottom" id="u0V-R1-zMy"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="V8B-Wu-E2N">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ka4-1E-4A3">
-                                <rect key="frame" x="256.5" y="28" width="321" height="528"/>
+                                <rect key="frame" x="27" y="28" width="321" height="305.5"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_world" translatesAutoresizingMaskIntoConstraints="NO" id="75b-LK-pAb">
-                                        <rect key="frame" x="134.5" y="0.0" width="52" height="382"/>
+                                        <rect key="frame" x="134.5" y="0.0" width="52" height="111.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="52" id="WaQ-7O-QOf"/>
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nzZ-dc-oW4">
-                                        <rect key="frame" x="0.0" y="392" width="321" height="136"/>
+                                        <rect key="frame" x="0.0" y="121.5" width="321" height="184"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0BO-Kg-K0T">
                                                 <rect key="frame" x="0.0" y="0.0" width="321" height="40"/>
@@ -229,6 +229,9 @@
                                                     <action selector="findLocationButton:" destination="zz3-9y-mTe" eventType="touchUpInside" id="h41-2f-eHe"/>
                                                 </connections>
                                             </button>
+                                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="F6M-6y-LMO">
+                                                <rect key="frame" x="150.5" y="144" width="20" height="40"/>
+                                            </activityIndicatorView>
                                         </subviews>
                                         <constraints>
                                             <constraint firstItem="bbF-JF-xmJ" firstAttribute="height" secondItem="0BO-Kg-K0T" secondAttribute="height" id="0IV-rG-YPZ"/>
@@ -248,6 +251,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="activityIndicator" destination="F6M-6y-LMO" id="ngb-oh-uIb"/>
                         <outlet property="locationTextField" destination="0BO-Kg-K0T" id="7eP-5J-Ff3"/>
                         <outlet property="websiteTextField" destination="DLp-rJ-wRz" id="ko5-7U-QQU"/>
                     </connections>
@@ -265,14 +269,14 @@
                         <viewControllerLayoutGuide type="bottom" id="CLM-fS-XmJ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="bnn-Gc-9BG">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="TPI-gq-wgz">
-                                <rect key="frame" x="0.0" y="28" width="834" height="1084"/>
+                                <rect key="frame" x="-4" y="28" width="383" height="639"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2P3-rK-0M8">
-                                <rect key="frame" x="20" y="1052" width="794" height="40"/>
+                                <rect key="frame" x="16" y="607" width="343" height="40"/>
                                 <color key="backgroundColor" red="0.0" green="0.66666666669999997" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="nM4-4d-rJS"/>
@@ -319,29 +323,29 @@
                         <viewControllerLayoutGuide type="bottom" id="LlB-7w-Wrw"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="USU-8h-kma">
-                        <rect key="frame" x="0.0" y="0.0" width="834" height="1112"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vUS-qQ-Bit">
-                                <rect key="frame" x="20" y="64" width="794" height="991"/>
+                                <rect key="frame" x="16" y="64" width="343" height="546"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="StudentCell" textLabel="SZL-qf-j5O" detailTextLabel="TEh-rE-7OK" style="IBUITableViewCellStyleSubtitle" id="w8f-bG-Iir">
-                                        <rect key="frame" x="0.0" y="28" width="794" height="44"/>
+                                        <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="w8f-bG-Iir" id="TaF-uU-MgP">
-                                            <rect key="frame" x="0.0" y="0.0" width="794" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SZL-qf-j5O">
-                                                    <rect key="frame" x="61" y="5" width="33.5" height="20.5"/>
+                                                    <rect key="frame" x="15" y="5" width="33.5" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="TEh-rE-7OK">
-                                                    <rect key="frame" x="61" y="25.5" width="44" height="14.5"/>
+                                                    <rect key="frame" x="15" y="25.5" width="44" height="14.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <nil key="textColor"/>
